--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
     crossorigin=""/>
 
-    <link rel="stylesheet" href="./node_modules/nes.css/css/nes.min.css">
+    <!--<link rel="stylesheet" href="./node_modules/nes.css/css/nes.min.css">!-->
     <link rel = "stylesheet" type = "text/css" href = "beepbeep.css">
 
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
