--- a/index.html
+++ b/index.html
@@ -27,5 +27,7 @@
       <div id="map" class = "leaflet-container"></div>
     </div>
     <script src="./map.js"></script>
+    <script src="./lib/p5.min.js"></script>
+    <script src="./sketch.js"></script>
   </body>
 </html>
